@@ -3,13 +3,13 @@ package io.github.taesk.parser.field;
 import com.squareup.javapoet.FieldSpec;
 import com.squareup.javapoet.TypeName;
 import io.github.taesk.parser.Parser;
-
 import org.jetbrains.annotations.NotNull;
 
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -24,12 +24,12 @@ public class MockFieldParser implements Parser<List<FieldSpec>> {
     public List<FieldSpec> invoke() {
         ExecutableElement constructorElement;
 
-        var constructorCount = element.getEnclosedElements().stream()
+        long constructorCount = element.getEnclosedElements().stream()
                 .filter(it -> it.getKind() == ElementKind.CONSTRUCTOR && it.getModifiers().contains(Modifier.PUBLIC))
                 .count();
 
         if (constructorCount < 1) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         if (constructorCount == 1) {
@@ -51,8 +51,8 @@ public class MockFieldParser implements Parser<List<FieldSpec>> {
     private List<FieldSpec> getFieldSpecs(ExecutableElement constructorElement) {
         return constructorElement.getParameters().stream()
                 .map(it -> {
-                            var paramName = it.getSimpleName().toString();
-                            var paramType = TypeName.get(it.asType());
+                            String paramName = it.getSimpleName().toString();
+                            TypeName paramType = TypeName.get(it.asType());
 
                             return FieldSpec.builder(paramType, paramName)
                                     .addModifiers(Modifier.PRIVATE, Modifier.FINAL)
